feat: multiple accession holders per user
Fixes https://forgemia.inra.fr/urgi-is/rare-basket/-/issues/30