@@ -1,5 +1,7 @@
 package fr.inra.urgi.rarebasket.web.user;
 
+import java.util.Collection;
+import java.util.Comparator;
 import java.util.List;
 import java.util.Set;
 import java.util.stream.Collectors;
@@ -18,31 +20,31 @@ public final class UserDTO {
     private final Long id;
     private final String name;
     private final List<Permission> permissions;
-    private final AccessionHolderDTO accessionHolder;
+    private final List<AccessionHolderDTO> accessionHolders;
     private final boolean globalVisualization;
-    private final Set<GrcDTO> visualizationGrcs;
+    private final List<GrcDTO> visualizationGrcs;
 
     public UserDTO(Long id,
                    String name,
-                   List<Permission> permissions,
-                   AccessionHolderDTO accessionHolder,
+                   Collection<Permission> permissions,
+                   Collection<AccessionHolderDTO> accessionHolders,
                    boolean globalVisualization,
-                   Set<GrcDTO> visualizationGrcs) {
+                   Collection<GrcDTO> visualizationGrcs) {
         this.id = id;
         this.name = name;
-        this.permissions = permissions;
-        this.accessionHolder = accessionHolder;
+        this.permissions = permissions.stream().sorted().toList();
+        this.accessionHolders = accessionHolders.stream().sorted(Comparator.comparing(AccessionHolderDTO::getName)).toList();
         this.globalVisualization = globalVisualization;
-        this.visualizationGrcs = visualizationGrcs;
+        this.visualizationGrcs = visualizationGrcs.stream().sorted(Comparator.comparing(GrcDTO::getName)).toList();
     }
 
     public UserDTO(User user) {
         this(user.getId(),
              user.getName(),
-             user.getPermissions().stream().map(UserPermission::getPermission).sorted().collect(Collectors.toList()),
-             user.getAccessionHolder() == null ? null : new AccessionHolderDTO(user.getAccessionHolder()),
+             user.getPermissions().stream().map(UserPermission::getPermission).toList(),
+             user.getAccessionHolders().stream().map(AccessionHolderDTO::new).toList(),
              user.isGlobalVisualization(),
-             user.getVisualizationGrcs().stream().map(GrcDTO::new).collect(Collectors.toSet()));
+             user.getVisualizationGrcs().stream().map(GrcDTO::new).toList());
     }
 
     public Long getId() {
@@ -57,15 +59,15 @@ public final class UserDTO {
         return permissions;
     }
 
-    public AccessionHolderDTO getAccessionHolder() {
-        return accessionHolder;
+    public List<AccessionHolderDTO> getAccessionHolders() {
+        return accessionHolders;
     }
 
     public boolean isGlobalVisualization() {
         return globalVisualization;
     }
 
-    public Set<GrcDTO> getVisualizationGrcs() {
+    public List<GrcDTO> getVisualizationGrcs() {
         return visualizationGrcs;
     }
 }
